[package]
name = "bigdecimal-rs"
version = "0.2.2-alpha.0"
authors = ["Andrew Kubera","dpbriggs"]
description = "Arbitrary precision decimal numbers"
documentation = "https://docs.rs/bigdecimal"
homepage = "https://github.com/akubera/bigdecimal-rs"
repository = "https://github.com/nash-io/bigdecimal-rs"
keywords = ["mathematics", "numerics", "decimal", "arbitrary-precision", "floating-point"]
license = "MIT/Apache-2.0"

[dependencies]
num-bigint = "0.3"
num-integer = "0.1.43"
num-traits = "0.2"
serde = { version = "1.0", optional = true }

[dev-dependencies.serde_json]
version = "1.0"

[features]
string-only = []
